--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,21 @@ body {
   font-size: 1.6rem;
 }
 
+.login-page {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.login-button-settings {
+  background-color: transparent;
+  border: none;
+  font-size: 2.5rem;
+  padding: 5px;
+  position: absolute;
+  right: 5px;
+}
+
 .game-container {
   align-items: center;
   background-color: #d9d9d9;
