--- a/src/components/MultipleTypeQuest.css
+++ b/src/components/MultipleTypeQuest.css
@@ -1,7 +1,7 @@
 .correct-answer {
-  border: 3px solid rgb(6, 240, 14);
+  border: 3px solid rgb(6, 240, 15) !important;
 }
 
 .incorrect-answer {
-  border: 3px solid rgb(233, 7, 7);
+  border: 3px solid rgb(255, 0, 0) !important;
 }
