--- a/src/Pages/login.css
+++ b/src/Pages/login.css
@@ -1,18 +1,23 @@
 body {
   align-content: center;
+  background: linear-gradient(white, #b46be8);
   display: flex;
   justify-content: center;
-  margin-top: 200px;
+  margin: 0;
+  margin-bottom: 200px;
+  margin-top: 80px;
+  padding: 0;
 }
 
 .form-login {
   align-items: center;
-  border: 1px solid black;
+  background-color: #b46be8;
+  border: 1px solid white;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
   height: 170px;
-  margin-top: 200px;
+  margin-top: 100px;
   padding: 25px;
   width: 400px;
 }
@@ -44,3 +49,12 @@ label {
   width: 80px;
 }
 
+button {
+  border-radius: 15px;
+  color: #b46be8;
+}
+
+.title {
+  color: #513069;
+  font-size: 600%;
+}
