--- a/src/Pages/game.css
+++ b/src/Pages/game.css
@@ -1,8 +1,77 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 110px;
+}
+
 .game {
-  border: 0.5px solid black;
+  background-color: #b46be8;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin-top: 100px;
+  margin-top: 20px;
+  padding: 30px 100px;
 }
 
+.timer {
+  color: #513069;
+  display: flex;
+  font-size: 40px;
+  font-weight: 1000;
+  justify-content: center;
+  margin-bottom: 30px;
+  margin-top: -3em;
+}
+
+.p {
+  color: white;
+  font-size: 20px;
+  font-weight: 1000;
+  margin-bottom: 3em;
+  margin-top: 3em;
+  text-shadow: -2px 0 #513069 , 0 2px #513069 , 2px 0 #513069 , 0 -2px #513069;
+}
+
+.h {
+  color: #513069;
+  font-size: 30px;
+  font-weight: 1000;
+  margin-bottom: 2em;
+}
+
+.questions button {
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 1.5px 2px #513069;
+  color: #513069;
+  font-size: 20px;
+  font-weight: 1000;
+  margin-bottom: 2em;
+  padding: 10px;
+  transition-duration: 0.4s;
+}
+
+.questions button:hover {
+  background-color: #513069;
+  color: white;
+}
+
+.next-question {
+  background-color: #b46be8;
+  border: 2px solid #513069;
+  border-radius: 8px;
+  box-shadow: 1.5px 2px #513069;
+  color: white;
+  font-size: 20px;
+  padding: 10px;
+  transition-duration: 0.4s;
+}
+
+.next-question:hover {
+  background-color: #513069;
+  color: #b46be8;
+}
