--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 25vmin;
   pointer-events: none;
 }
 
@@ -15,8 +15,7 @@
   border: 1px solid green;
 }
 
-@media ( prefers-reduced-motion : no-preference ) {
-
+@media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: shake infinite 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   }
@@ -24,7 +23,7 @@
 
 .App-header {
   align-items: center;
-  background-color: #282c34;
+  background-color: #375daa;
   color: white;
   display: flex;
   flex-direction: column;
@@ -38,20 +37,58 @@
 }
 
 @keyframes shake {
-
-  10%, 90% {
+  10%,
+  90% {
     transform: translate3d(-1px, 0, 0);
   }
 
-  20%, 80% {
+  20%,
+  80% {
     transform: translate3d(2px, 0, 0);
   }
 
-  30%, 50%, 70% {
+  30%,
+  50%,
+  70% {
     transform: translate3d(-4px, 0, 0);
   }
 
-  40%, 60% {
+  40%,
+  60% {
     transform: translate3d(4px, 0, 0);
   }
+}
+
+constainer {
+  margin-top: 100;
+  display: inline-block;
+  width: 100px;
+}
+
+.questions {
+  max-width: 700px;
+}
+input[type='text'] {
+  border-radius: 5px;
+  border-color: black;
+}
+input[type='email'] {
+  border-radius: 5px;
+  border-color: black;
+}
+
+button {
+  border-radius: 10px;
+  height: 20px;
+  width: auto;
+  padding: 0 50px 0 50px;
+  color: aliceblue;
+  border-color: white;
+  background-color: #182338;
+}
+
+a {
+  text-decoration: none;
+  font-size: small;
+  color: aliceblue;
 }
