--- a/src/App.css
+++ b/src/App.css
@@ -60,35 +60,37 @@
 }
 
 constainer {
-  margin-top: 100;
   display: inline-block;
+  margin-top: 100;
   width: 100px;
 }
 
 .questions {
   max-width: 700px;
 }
+
 input[type='text'] {
-  border-radius: 5px;
   border-color: black;
+  border-radius: 5px;
 }
+
 input[type='email'] {
-  border-radius: 5px;
   border-color: black;
+  border-radius: 5px;
 }
 
 button {
-  border-radius: 10px;
-  height: 20px;
-  width: auto;
-  padding: 0 50px 0 50px;
-  color: aliceblue;
-  border-color: white;
   background-color: #182338;
+  border-color: white;
+  border-radius: 10px;
+  color: aliceblue;
+  height: 20px;
+  padding: 0 50px;
+  width: auto;
 }
 
 a {
-  text-decoration: none;
-  font-size: small;
   color: aliceblue;
+  font-size: small;
+  text-decoration: none;
 }
