--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -1,6 +1,7 @@
 .titleSettings {
   align-items: center;
   background-color: #242f40;
+  border-radius: 30px 30px 0 0;
   color: #cca43b;
   display: flex;
   font-family: monospace;
@@ -8,12 +9,13 @@
   justify-content: center;
   margin: 0;
   padding: 20px;
-  width: 100vw;
+  width: 93%;
 }
 
 .fatherSettings {
   align-items: center;
   background: white;
+  border-radius: 30px;
   box-shadow: 4px 4px 4px 4px #242f40;
   display: flex;
   flex-direction: column;
@@ -21,6 +23,7 @@
   justify-content: space-between;
   margin: auto;
   margin-top: 50px;
+  max-width: 500px;
   width: 100%;
 }
 
