--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@
   border: 1px solid green;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+@media ( prefers-reduced-motion : no-preference ) {
+
   .App-logo {
     animation: shake infinite 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   }
@@ -37,58 +38,56 @@
 }
 
 @keyframes shake {
-  10%,
-  90% {
+
+  10%, 90% {
     transform: translate3d(-1px, 0, 0);
   }
 
-  20%,
-  80% {
+  20%, 80% {
     transform: translate3d(2px, 0, 0);
   }
 
-  30%,
-  50%,
-  70% {
+  30%, 50%, 70% {
     transform: translate3d(-4px, 0, 0);
   }
 
-  40%,
-  60% {
+  40%, 60% {
     transform: translate3d(4px, 0, 0);
   }
 }
 
-constainer {
-  margin-top: 100;
+.container {
   display: inline-block;
+  margin-top: 100;
   width: 100px;
 }
 
 .questions {
   max-width: 700px;
 }
-input[type='text'] {
-  border-radius: 5px;
+
+input [ type = 'text' ] {
   border-color: black;
+  border-radius: 5px;
 }
-input[type='email'] {
-  border-radius: 5px;
+
+input [ type = 'email' ] {
   border-color: black;
+  border-radius: 5px;
 }
 
 button {
-  border-radius: 10px;
-  height: 20px;
-  width: auto;
-  padding: 0 50px 0 50px;
-  color: aliceblue;
-  border-color: white;
   background-color: #182338;
+  border-color: white;
+  border-radius: 10px;
+  color: aliceblue;
+  height: 20px;
+  padding: 0 50px;
+  width: auto;
 }
 
 a {
-  text-decoration: none;
-  font-size: small;
   color: aliceblue;
+  font-size: small;
+  text-decoration: none;
 }
