--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  background-color: rgb(162, 196, 235);
+  margin: 0;
+  padding: 0
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
